<resources>
    <string name="app_name">VOOCOO蔚刻</string>
    <string name="exit_app">再按一次返回退出VOOCOO蔚刻</string>
    <string name="login_title">欢迎登录VOOCOO蔚刻</string>
    <string name="one_key_login">本机号码一键登录</string>
    <string name="use_other_phone">使用其他手机号码</string>
    <string name="input_phone_hint">请输入手机号</string>
    <string name="input_pwd_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="pwd_login">密码登录</string>
    <string name="code_login">验证码登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">注册</string>
    <string name="other_login_way">其他登录方式</string>
    <string name="get_code">获取验证码</string>
    <string name="input_code">输入验证码</string>
    <string name="get_code_again">重新获取验证码</string>
    <string name="input_code_hint">请输入验证码</string>
    <string name="code_is_send_to">验证码已发送至</string>
    <string name="register_user">注册账号</string>
    <string name="register_and_login">注册并登录</string>
    <string name="input_code_please">请输入验证码</string>
    <string name="input_pwd_please">请输入密码</string>
    <string name="input_old_pwd_please">请输入旧密码</string>
    <string name="input_pwd_re_please">请再次输入密码</string>
    <string name="help">帮助反馈</string>
    <string name="ensure">确定</string>
    <string name="input_phone_error">请输入合法的手机号</string>
    <string name="input_password_error">请输入6到16位长度的密码</string>
    <string name="password_not_equal_ensure_password">新密码与确认新密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="forget_success">忘记成功</string>
    <string name="modity_success">修改成功</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="device_connting">正在连接设备, 请稍后...</string>
    <string name="device_is_near">请确保设备已处于配置状态, 且位于手机附近</string>
    <string name="config_tips">配网过程中，手机无法连接网络为正常现象，请不用处理</string>
    <string name="not_support_5g">暂不支持5G频段WiFi,请选择2.4G频段Wi-Fi热点</string>
    <string name="please_connect_wifi">请连接WiFi</string>
    <string name="please_connect_wifi_pwd">点击输入密码</string>
    <string name="add_success_title">配置成功</string>
    <string name="add_success_tips">来给你的设备起个名字吧~</string>
    <string name="device_near_luy">请将设备尽量靠近路由器</string>
    <string name="device_near_luy_tips1">连接设备中...（连接设备成功）</string>
    <string name="device_near_luy_tips2">向设备传输信息中...（向设备传输信息成功）</string>
    <string name="device_near_luy_tips3">设备连接网络中</string>
    <string name="device_near_luy_tips4">获取设备状态中</string>
    <string name="tab_home">首页</string>
    <string name="tab_mail">商城</string>
    <string name="tab_mine">我的</string>
    <string name="text_my_pet">我的宠物</string>
    <string name="text_add">添加宠物</string>
    <string name="text_my_news">我的动态</string>
    <string name="text_my_collection">我的收藏</string>
    <string name="text_my_shop">商城</string>
    <string name="text_after_sale">宠物设备专属售后</string>
    <string name="text_setting">设置</string>
    <string name="text_msg_push">消息推送</string>
    <string name="text_auto_play">移动网络下自动播放视频</string>
    <string name="text_clear_cache">清除缓存</string>
    <string name="text_app_version">APP版本</string>
    <string name="text_help">帮助与反馈</string>
    <string name="text_about">关于我们</string>
    <string name="text_privacy">隐私政策</string>
    <string name="text_license">用户协议</string>
    <string name="text_quit">退出账号</string>
    <string name="text_cancel_account">注销账号</string>
    <string name="text_home_input_hint">搜索更多有趣萌宠</string>
    <string name="text_open_all_comment">展开所有评论</string>
    <string name="text_follow">+关注</string>
    <string name="text_follow2">关注</string>
    <string name="text_is_follow">已关注</string>
    <string name="text_frident">粉丝</string>
    <string name="text_feel_good">人觉得很赞</string>
    <string name="text_my_dev">我的设备</string>
    <string name="text_recommend_dev">推荐设备</string>
    <string name="text_weight_today">今日体重</string>
    <string name="text_sport_today">今日运动量</string>
    <string name="text_health_today">今日健康</string>
    <string name="text_litter_allowance">猫砂余量</string>
    <string name="text_turn_on">开机</string>
    <string name="text_turn_off">关机</string>
    <string name="text_clean">手动清理</string>
    <string name="text_sand_change">一键换砂</string>
    <string name="text_add_sand">加砂模式</string>
    <string name="text_defecation">排便</string>
    <string name="text_average_duration">平均时长</string>
    <string name="text_health_advice">健康建议</string>
    <string name="text_usage_record">使用记录</string>
    <string name="text_auto_setting">自动清理延迟设置</string>
    <string name="text_clean_setting">集便抽屉清理提醒</string>
    <string name="text_clean_setting2">集便抽屉</string>
    <string name="text_lost_warn">缺砂提醒</string>
    <string name="text_come_warn">猫咪来过提醒</string>
    <string name="text_share">共享设备</string>
    <string name="text_use_explain">使用说明</string>
    <string name="text_unbind">解除绑定</string>
    <string name="text_tips_unbind">解绑设备会清除设备上的历史记录，请问是否解绑?</string>
    <string name="text_donot_disturb">勿扰模式</string>
    <string name="text_start_time">开启时间</string>
    <string name="text_end_time">结束时间</string>
    <string name="text_news">动态</string>
    <string name="text_comment">评论</string>
    <string name="text_pet_input_hint">搜索更多萌宠趣闻</string>
    <string name="text_dynamic_message">动态消息</string>
    <string name="text_comment_your_dynadic">位用户评论了你的动态,去看看吧</string>
    <string name="text_resp">回复</string>
    <string name="text_input_comment">说点什么...</string>
    <string name="text_content_detile">文章详情</string>
    <string name="text_head">头像</string>
    <string name="text_user_id">用户ID</string>
    <string name="text_sex">性别</string>
    <string name="text_modity_pwd">修改密码</string>
    <string name="text_bind_email">邮箱绑定</string>
    <string name="text_phone_num">手机号</string>
    <string name="text_bind_wechat">微信</string>
    <string name="text_bind_weibo">微博绑定</string>
    <string name="text_birthday">生日</string>
    <string name="text_city">当前城市</string>
    <string name="text_personal_info">个人信息</string>
    <string name="text_send">发送</string>
    <string name="text_publish">发布</string>
    <string name="text_hint_feedback">您有什么问题或者什么想法？可以在此处向我们反馈</string>
    <string name="text_upload_pic">上传图片</string>
    <string name="post_photo_error_title">上传失败</string>
    <string name="post_photo_error_content">上传头像失败，请重试！</string>
    <string name="alert">提示</string>
    <string name="retry">重试</string>
    <string name="no_permission">没有权限</string>
    <string name="text_denied_permission">您拒绝了给予权限</string>
    <string name="prompt_title">提示</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="hint_nick_name">请输入昵称</string>
    <string name="hint_nick_name_too_long">昵称过长,最大长度为10</string>
    <string name="hint_kg">请输入体重</string>
    <string name="set_nick_name">设置昵称</string>
    <string name="text_privacy_protocol">隐私政策</string>
    <string name="text_privacy_protocol_tips">我们深知隐私对您的重要性，为了更全面地呈现我们我们收集和使用您个人信息的相关情况，我们更具最新法律法规的要求，对隐私政策进行了详细的修订。当您点击[同意] 即表示您已充分阅读、理解并接受更新过的《隐私政策》的全部内容。请花一些时间熟悉我们的隐私政策，如果您有任何问题，请随时联系我们</string>
    <string name="text_agree">同意</string>
    <string name="text_not_agress">不同意</string>
    <string name="text_readed">已阅读和同意</string>
    <string name="device_connect_fail">配置失败</string>
    <string name="device_connect_success">设备连接成功</string>
    <string name="add_device_fail_tips">1.确认设备已处于待配置状态\n\n2.确认手机与设备在5米以内的距离\n\n3.将设备先断电,再通电,然后重新添加设备</string>
    <string name="change_info_to_dev">向设备传输信息成功</string>
    <string name="dev_connect_net_success">设备连上网络成功</string>
    <string name="dev_bind_fail">设备绑定失败</string>
    <string name="hint_email">请输入正确邮箱</string>
    <string name="text_day">陪伴我%1$d天</string>
    <string name="text_photo_with_pet">给宠物拍个照吧</string>
    <string name="text_sterilization">是否绝育</string>
    <string name="text_date_of_adoption">收养日期</string>
    <string name="text_weight">体重</string>
    <string name="text_weight2">重量</string>
    <string name="text_sterilization_done">已绝育</string>
    <string name="text_sterilization_not">未绝育</string>
    <string name="text_upload_head">请上传头像</string>
    <string name="hint_pet_type">请选择品种</string>
    <string name="hint_birthday">请选择生日</string>
    <string name="hint_ate_of_adoption">请选择收养日期</string>
    <string name="hint_input">请输入</string>
    <string name="hint_input_email">请输入邮箱</string>
    <string name="text_contact_phone">联系手机号*</string>
    <string name="text_input_phone">请输入手机号</string>
    <string name="text_input_phone_right">请输入正确的手机号</string>
    <string name="text_feedback_success">反馈成功</string>
    <string name="text_status_off">关机</string>
    <string name="text_status_on">开机</string>
    <string name="text_status_add">请打开猫砂盆上盖及防砂门,\n从上方添加猫砂！</string>
    <string name="text_status_change">一键换砂中</string>
    <string name="text_status_clean">正在清理中</string>
    <string name="text_status_wc">猫咪正在如厕中</string>
    <string name="text_error_turn">猫砂桶转动过程中有猫咪跳入或检查到有异常重量报警，猫砂桶停转并返回原位</string>
    <string name="text_error_weight">需要人到机器处检查异常，看机器四脚是否水平，机器不能放在地毯等软性地面上，不能贴着墙壁放置</string>
    <string name="text_error_door">集便仓有异物阻挡自动门无法正常开合，机器停止工作要等人去处理</string>
    <string name="text_error_install">请检查防砂门、上盖、集便仓等组件是否已正确安装</string>
    <string name="text_error_anti_pich">防夹装置报警，请马上前往排查，确保猫咪安全</string>
    <string name="text_litter_box">猫砂盆</string>
    <string name="text_select_pet_to_record">选择宠物添加成长记录</string>
    <string name="text_idea_now">这一刻的想法...</string>
    <string name="text_hint_ide">请输入您的想法</string>
    <string name="text_publish_success">发布成功</string>
    <string name="text_select">已选</string>
    <string name="text_turn_on_first">请开机</string>
    <string name="text_dev_runing">设备运行中</string>
    <string name="text_tips_add">请加好猫砂后手动退出加砂模式</string>
    <string name="text_min">分钟</string>
    <string name="text_end_must_big_to_start">结束时间必须开始时间</string>
    <string name="text_record_head">%1$s来过    %2$s</string>
    <string name="text_record_content">停留%1$s秒, 体重%2$skg</string>
    <string name="text_record_content2">停留%1$s秒, 体重%2$skg, 便便%3$sg</string>
    <string name="text_set_dev_name">设置设备名称</string>
    <string name="text_input_dev_name">请输入设备名称</string>
    <string name="text_input_dev_name_too_long">设备名称过长,最大长度为10</string>
    <string name="text_save">保存</string>
    <string name="text_cancel">取消</string>
    <string name="text_online">在线</string>
    <string name="text_offline">设备离线</string>
    <string name="text_offline2">离线</string>
    <string name="text_share2">分享</string>
    <string name="text_not_dev">还没有添加设备哦,去添加</string>
    <string name="text_add_dev_tips">插上电源后请长按设备开关5秒，待屏幕显示为\n配网模式,松开开关进入配网模式</string>
    <string name="text_ensure_dev">屏幕已显示为配网模式</string>
    <string name="text_dev_offline">设备离线</string>
    <string name="input_username_hint">请输入账号</string>
    <string name="please_try_title">服务器连接失败，请检查：</string>
    <string name="please_try_tips1">1.Wi-Fi密码是否正确</string>
    <string name="please_try_tips2">2.路由器网络正常</string>
    <string name="please_try_tips3">3.请检查路由器设置，黑白名单或更换Wi-Fi</string>
    <string name="text_read_understand">请充分阅读并理解</string>
    <string name="text_privacy2">《隐私政策》</string>
    <string name="text_and">与</string>
    <string name="text_license2">《用户协议》</string>
    <string name="text_read_understand2">我已经阅读并同意</string>
    <string name="text_head_and_name">头像和昵称</string>
    <string name="text_nickname">昵称</string>
    <string name="text_pin">品种</string>
    <string name="text_input_nickname">请输入昵称</string>
    <string name="text_input_pin">请输入品种</string>
    <string name="text_set_wifi">设置工作Wi-Fi</string>
    <string name="Tips">温馨提示:</string>
    <string name="Tips1">您正在更新固件，在升级过程中，</string>
    <string name="Tips2">1.请确保WiFI连接正常:</string>
    <string name="Tips3">2.设备保持接通电源状态</string>
    <string name="Tips4">3.APP保持停留在当前页面</string>
    <string name="Tips5">4.升级过程中设备功能将暂停使用</string>
</resources>