<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/rect_corner_solid"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/text_privacy"
            android:textColor="@color/color_2B2B2B"
            android:textStyle="bold"
            android:textSize="18sp"/>

    <LinearLayout
            android:id="@+id/ly_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:textSize="12sp"
                    android:text="@string/text_read_understand"
                    android:textColor="#000000"/>


            <TextView
                    android:id="@+id/tv_privacy_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/text_privacy2"
                    android:textColor="#3f9eff"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_and"
                    android:textSize="12sp"
                    android:textColor="#000000"/>


            <TextView
                    android:id="@+id/tv_license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/text_license2"
                    android:textColor="#3f9eff"/>

        </LinearLayout>

        <CheckBox
                android:id="@+id/cb_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_read_understand2"
                android:textSize="12sp"
                android:textColor="#000000"/>


    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">


        <Button
                android:id="@+id/button_confirm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/text_agree"
                android:background="@color/color_tab_select"
                android:textColor="#ffffff"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/tv_dis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_agress"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:textColor="#000000"/>

    </LinearLayout>
</LinearLayout>