<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/tips"
        android:text="@string/Tips"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </TextView>
    <TextView
        android:layout_marginTop="15sp"
        android:textSize="15dp"
        android:id="@+id/tips1"
        android:text="@string/Tips1"
        app:layout_constraintTop_toBottomOf="@+id/tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </TextView>
    <TextView
        android:textSize="15dp"
        android:id="@+id/tips2"
        android:text="@string/Tips2"
        app:layout_constraintTop_toBottomOf="@+id/tips1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </TextView>
    <TextView
        android:textSize="15dp"
        android:id="@+id/tips3"
        android:text="@string/Tips3"
        app:layout_constraintTop_toBottomOf="@+id/tips2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </TextView>
    <TextView
        android:textSize="15dp"
        android:id="@+id/tips4"
        android:text="@string/Tips4"
        app:layout_constraintTop_toBottomOf="@+id/tips3"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </TextView>
    <TextView
        android:textSize="15dp"
        android:id="@+id/tips5"
        android:text="@string/Tips5"
        app:layout_constraintTop_toBottomOf="@+id/tips4"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </TextView>
    <TextView
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tips5"
        android:text="0%"
        android:textSize="18sp"
        android:id="@+id/tvProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <ProgressBar
        android:id="@+id/pbProgress"
        android:max="100"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ProgressBar>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>