<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="37dp"
        android:paddingRight="37dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_2B2B2B"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/input_old_pwd_please"/>

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_2B2B2B"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/input_pwd_please"/>

        <EditText
            android:id="@+id/et_pwd_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_2B2B2B"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/input_pwd_re_please"/>

        <Button
            android:id="@+id/btn_ensure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_unable"
            android:textColor="@color/color_ffffff"
            android:layout_marginTop="35dp"
            android:text="@string/ensure"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>