<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_head_and_name"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.voocoo.pet.common.widgets.RoundImageView
        android:id="@+id/iv_head"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:type="circle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="51dp"
        android:src="@mipmap/picture" />

    <LinearLayout
        android:id="@+id/ly_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:background="@drawable/edittext_nomal"
        android:padding="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nickname"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end"
            android:hint="@string/text_input_nickname"
            android:layout_height="match_parent"
            android:textColor="#000"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_brank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edittext_nomal"
        android:padding="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pin"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_brand"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end"
            android:hint="@string/text_input_pin"
            android:layout_height="match_parent"
            android:textColor="#000"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>